--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,24 @@
 ; PlatformIO Project Configuration File
 ;
-; Please visit documentation for options and examples
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-lib_deps =
-    h2zero/NimBLE-Arduino
-    PubSubClient
+lib_deps = 
+	h2zero/NimBLE-Arduino
+	PubSubClient
 
 [env:esp32]
 platform = espressif32
 framework = arduino
 board = esp32dev
 monitor_speed = 115200
-
+lib_deps = 
+	256dpi/MQTT@^2.5.0
+	h2zero/NimBLE-Arduino@^1.3.7
+	knolleary/PubSubClient@^2.8.0
